# RegexForge-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
regexforge/: __init__.py  __main__.py  cli.py
regexforge/core/: __init__.py  generator.py  highlight.py  matcher.py
regexforge/templates/: __init__.py  patterns.py
regexforge/tui/: __init__.py  dashboard.py
regexforge/utils/: __init__.py  history.py
