[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regexforge-cli"
version = "1.0.0"
description = "🔧 Lightweight Terminal Regex Testing & Building Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RegexForge Team", email = "regexforge@example.com"}
]
keywords = ["regex", "regular expression", "cli", "terminal", "tui", "testing", "development tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.scripts]
regexforge = "regexforge.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/RegexForge-CLI"
Documentation = "https://github.com/gitstq/RegexForge-CLI#readme"
Repository = "https://github.com/gitstq/RegexForge-CLI.git"
Issues = "https://github.com/gitstq/RegexForge-CLI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["regexforge*"]
